--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
             align-items: center;
             height: 100vh; /* Tam ekran merkezleme */
         }
+        .test-button1 {
+            display: inline-block;
+            padding: 45px 105px;
+            background-color: #000000; /* renk */
+            color: white;
+            text-decoration: none;
+            border-radius: 0px;
+            font-weight: bold;
+            font-size: 3rem;
+            transition: all 0.3s ease; /* Yumuşak geçiş */
+        }
+        .test-button1:hover {
+            transform: translateX(15px); /* Sağa 10px kay */
+            background-color: #000000; /* renk dönüşümü */
+            
+        }
         .test-button {
             display: inline-block;
             padding: 45px 105px;
@@ -24,7 +40,7 @@
             text-decoration: none;
             border-radius: 0px;
             font-weight: bold;
-            font-size: 1.2rem;
+            font-size: 3rem;
             transition: all 0.3s ease; /* Yumuşak geçiş */
         }
         .test-button:hover {
@@ -35,6 +51,7 @@
     </style>
 </head>
 <body>
-    <a href="#" class="test-button">Test Butonu</a>
+    <a href="#1" class="test-button1">HUB</a>
+    <a href="#" class="test-button">CABLE</a>
 </body>
 </html>
